--- a/javascript/index.html
+++ b/javascript/index.html
@@ -14,5 +14,12 @@
         <p style="color:blue;">This is a paragraph.</p>
         <p style="font-family:courier;">This is a paragraph.</p>
         <p title="About W3Schools">W3Schools is a web developer's site.</p>
+        <p>x = <span id="myText"></span>
+            <script type="text/javascript">
+                document.write(x)
+              </script>
+        
+        </p>
+
     </body>
 </html>
