Added comment for source of extensions

--- a/javascript/REST/index.html
+++ b/javascript/REST/index.html
@@ -3,7 +3,12 @@
     <head>
    
     </head>
+  <!--
+  https://www.youtube.com/watch?v=VknMxAIbJj4&list=PLZlA0Gpn_vH-ty-HpSPuC3B6evk9NP1dw&index=2
   
+  Which extensions?   ^^^^^^
+  
+  -->
     <body onload="myOnloadFunction()">
       <script src="Learn.js">
       </script>  
