--- a/javascript/REST/index.html
+++ b/javascript/REST/index.html
@@ -8,6 +8,11 @@
   
   Which extensions?   ^^^^^^
   
+  this works
+  curl -i https://api.polygon.io/v2/aggs/ticker/X:XRPUSD/range/1/day/2024-08-09/2024-08-09 \
+    -H "authorization: Bearer Lv_E905oWriVZpHHAOXkkq3FQfZ28yKd"
+
+    
   -->
     <body onload="myOnloadFunction()">
       <script src="Learn.js">
@@ -15,4 +20,8 @@
     </body>
     <p id="myText">Hi.  Default on load if onload isn't used.</p> 
 
+    <button type="button" onclick="CheckXRP()">
+      Click me to display Date and Time.
+
+    </button>
 </html>
