--- a/javascript/REST/index.html
+++ b/javascript/REST/index.html
@@ -12,6 +12,8 @@
   curl -i https://api.polygon.io/v2/aggs/ticker/X:XRPUSD/range/1/day/2024-08-09/2024-08-09 \
     -H "authorization: Bearer Lv_E905oWriVZpHHAOXkkq3FQfZ28yKd"
 
+  curl -i https://api.polygon.io/v2/aggs/ticker/X:BTCUSD/range/1/day/2024-10-22/2024-10-23 \
+    -H "authorization: Bearer Lv_E905oWriVZpHHAOXkkq3FQfZ28yKd"
     
   -->
     <body onload="myOnloadFunction()">
